chore(*): refactoring of subflow